# fermecpp

./: CMakeLists.txt
.github/scripts/: notify-discord.py
.github/workflows/: build.yml  code-quality.yml  release.yml
include/: Animal.h  Command.h  CommandProcessor.h  Enclos.h  Ferme.h  InputHandler.h  REPL.h  REPLEngine.h
src/: Animal.cpp  Command.cpp  CommandProcessor.cpp  Enclos.cpp  Ferme.cpp  InputHandler.cpp  REPL.cpp  REPLEngine.cpp  main.cpp
